Squashed commit of the following:
commit 55a31af3874bbb4da0f941191797c0a11704d361
Merge: 4e604c7d5 dc3a2e10c
Author: Viren Baraiya <virenx@gmail.com>
Date:   Thu Jul 18 07:56:17 2024 -0700

    Merge pull request #212 from danmiller192/fix_postgres_indexer_async_issue

    Updated Postgres indexer to handle out of order updates

commit dc3a2e10c23710bcaf90a331facfaca63ac5ea91
Author: DanMiller192 <55767381+danmiller192@users.noreply.github.com>
Date:   Sun Jul 14 21:50:47 2024 +0100

    Updated Postgres indexer to only index if the update is newer than the current index

commit 4e604c7d58b9a1a75da9c4f50a3d53db8408b8ab
Merge: abce46e09 29b314d5b
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sun Jul 14 11:39:50 2024 -0700

    Merge pull request #203 from prathamjagga/patch-1

    Update JDK Version in Prerequisites

commit abce46e09aa36c711c92a67f4bb6aef73bb24eb2
Merge: 3a43cc675 29ec813da
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sat Jul 13 08:28:07 2024 -0700

    Merge pull request #207 from conductor-oss/flyway_upgrade

    Upgrade flyway

commit 29ec813dacc53108f536cf6c42402f864a04cdca
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sat Jul 13 07:57:59 2024 -0700

    add flyway to external storage module

commit 02c7499c7fa3c85bebc1d58fd1d6a81f1629cc16
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sat Jul 13 01:54:25 2024 -0700

    upgrade flyway

commit 29b314d5b50eb3a05dec8f6218da2014193837fd
Author: Knight1001 <30550632+knight1001d@users.noreply.github.com>
Date:   Tue Jul 9 13:45:34 2024 +0530

    Update JDK Version in Prerequisites

    Conductor requires JDK 17 for building from source code. Updated the required JDK version in the docs.

commit 3a43cc67543b5a8004f73ccfbe9db196262b8d40
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sun Jul 7 13:52:54 2024 -0700

    Update README.md

commit 98760b2ce048d8e88770e1c62d07cb8597720d1e
Author: Viren Baraiya <virenx@gmail.com>
Date:   Sun Jul 7 13:52:07 2024 -0700

    Update README.md

commit